Agrego las runas

--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
                                         </div>
 
                                         <div class="primary__tree--keystone">
-                                            <div class="masteries keystone__row masterie__inactive--row">
-                                                <div class="masterie keystone">
+                                            <div class="masteries keystone__row">
+                                                <div class="masterie keystone fake">
                                                     <img src="assets/Runas/PressTheAttack.png" alt=" PressTheAttack">
                                                 </div>
-                                                <div class="masterie  keystone">
+                                                <div class="masterie keystone">
                                                     <img src="assets/Runas/LethalTempoTemp.png" alt="LethalTempoTemp">
                                                 </div>
                                                 <div class="masterie keystone">
@@ -364,13 +364,13 @@
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/Overheal.png" alt="Overheal">
                                                     </div>
                                                     <div class="masterie masterie__active">
                                                         <img src="assets/Runas/Triumph.png" alt="Triumph">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets//Runas/PresenceOfMind.png"
                                                             alt="PresenceOfMind">
                                                     </div>
@@ -378,13 +378,13 @@
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/LegendAlacrity.png" alt="LegendAlacrity">
                                                     </div>
                                                     <div class="masterie masterie__active">
                                                         <img src="assets/Runas/LegendTenacity.png" alt="LegendTenacity">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/LegendBloodline.png"
                                                             alt="LegendBloodline">
                                                     </div>
@@ -392,10 +392,10 @@
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/CoupDeGrace.png" alt="CoupDeGrace">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/CutDown.png" alt="CutDown">
                                                     </div>
                                                     <div class="masterie masterie__active">
@@ -416,23 +416,23 @@
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries shard">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/Demolish.png" alt="Demolish">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/FontOfLife.png" alt="FontOfLife">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/MirrorShell.png" alt="MirrorShell">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries shard">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/Conditioning.png" alt="Conditioning">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/SecondWind.png" alt="SecondWind">
                                                     </div>
                                                     <div class="masterie masterie__active">
@@ -442,13 +442,13 @@
                                             </div>
                                             <div class="runes__row">
                                                 <div class="masteries shard">
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/Overgrowth.png" alt="Overgrowth">
                                                     </div>
                                                     <div class="masterie masterie__active">
                                                         <img src="assets/Runas/Revitalize.png" alt="Revitalize">
                                                     </div>
-                                                    <div class="masterie masterie__inactive">
+                                                    <div class="masterie">
                                                         <img src="assets/Runas/Unflinching.png" alt="Unflinching">
                                                     </div>
                                                 </div>
@@ -461,11 +461,11 @@
                                                             <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
                                                                 alt="StatModsAdaptiveForceIcon">
                                                         </div>
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsAttackSpeedIcon.png"
                                                                 alt="StatModsAttackSpeedIcon">
                                                         </div>
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsCDRScalingIcon.png"
                                                                 alt="StatModsCDRScalingIcon">
                                                         </div>
@@ -477,11 +477,11 @@
                                                             <img src="assets/Runas/StatModsAdaptiveForceIcon.png"
                                                                 alt="StatModsAdaptiveForceIcon">
                                                         </div>
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsArmorIcon.png"
                                                                 alt="StatModsArmorIcon">
                                                         </div>
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsMagicResIcon.png"
                                                                 alt="StatModsMagicResIcon">
                                                         </div>
@@ -489,7 +489,7 @@
                                                 </div>
                                                 <div class="runes__row">
                                                     <div class="masteries shard">
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsHealthScalingIcon.png"
                                                                 alt="StatModsHealthScalingIcon">
                                                         </div>
@@ -497,7 +497,7 @@
                                                             <img src="assets/Runas/StatModsArmorIcon.png"
                                                                 alt="StatModsArmorIcon">
                                                         </div>
-                                                        <div class="rune masterie__inactive">
+                                                        <div class="rune">
                                                             <img src="assets/Runas/StatModsMagicResIcon.png"
                                                                 alt="StatModsMagicResIcon">
                                                         </div>
