Sección Runas terminada.

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                                 <div class="masterie keystone">
                                                     <img src="assets/Runas/FleetFootwork.png" alt="FleetFootwork">
                                                 </div>
-                                                <div class="masterie keystone keystone__active">
+                                                <div class="masterie keystone masterie__active">
                                                     <img src="assets/Runas/Conqueror.png" alt="Conqueror">
                                                 </div>
                                             </div>
