Sección de Runas Y Maestrias terminada.

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <!-- Sección Runas Maestrias ETC -->
         <section id="runas" class="section">
             <div class="container full__screen--lg">
-                <h2 class="section__title">Runas y Maestrias</h2>
+                <h2 class="section__title">Runas y Maestrias Para TOP</h2>
                 <article class="champion__info" style="background-image: radial-gradient(
       400px 200px at 60% 34%,
       rgba(7, 7, 32, 0) 0%,
