Agrego cards automáticas y slider

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="container full__screen--lg" id="champs__section">
                 <h2 class="section__title">Mis "Mains"</h2>
 
-                <a href="#runas" class="campeon">
+                <!-- <a href="#runas">
                     <article class="champion__card" id="Aatrox">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <h3>Aatrox</h3>
@@ -178,7 +178,7 @@
                     </article>
                 </a>
 
-                <a href="#runas" class="campeon">
+                <a href="#runas">
                     <article class="champion__card" id="Akshan">
                         <img src="assets/Akshan.png" alt="Akshan">
                         <h3>Akshan</h3>
@@ -188,7 +188,7 @@
                     </article>
                 </a>
 
-                <a href="#runas" class="campeon">
+                <a href="#runas">
                     <article class="champion__card" id="Sylas">
                         <img src="assets/Sylas.png" alt="Sylas">
                         <h3>Sylas</h3>
@@ -270,7 +270,7 @@
 
                 <a href="#runas">
                     <article class="champion__card" id="LeeSin">
-                        <img src="assets/LeeSin.png" alt="LeeSin">
+                        <img src="assets/LeeSin.png" alt="Lee Sin">
                         <h3>Lee Sin</h3>
                         <p>
                             EL CIEGO
@@ -286,7 +286,7 @@
                             EL VÁMPIRO
                         </p>
                     </article>
-                </a>
+                </a> -->
 
             </div>
         </section>
@@ -1127,65 +1127,22 @@
 
 
         <section id="testimonios" class="testimonials">
-            <article class="hero__image"
-                style="--hero-image: url('assets/hero-image-customers.jpg'); --hero-attachment:scroll;">
+            <article class="hero__image" style="--hero-image: url('assets/Akshan_wall.jpg'); --hero-attachment:scroll;">
                 <aside class="hero__image--opacity" style="--hero-opacity-color:var(--white-alpha-color)">
-                    <div class="hero__image--content">
+                    <div class="skins__content">
                         <div class="container">
-                            <h2 class="section__title">Mis clientes dicen</h2>
-                            <article class="testimonials__carousel"
-                                style="--carousel-bg-color: var(--white-alpha-color)">
-                                <input type="radio" name="slides" id="slide-1" checked>
-                                <input type="radio" name="slides" id="slide-2">
-                                <input type="radio" name="slides" id="slide-3">
-                                <input type="radio" name="slides" id="slide-4">
-                                <ul class="slides">
-                                    <li class="slide">
-                                        <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 1">
-                                        <blockquote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
-                                            tempora quia quam assumenda amet cum neque sit distinctio obcaecati. Commodi
-                                            inventore amet itaque soluta animi illum error quibusdam maiores quisquam."
-                                        </blockquote>
-                                        <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
-                                        <h6>Puesto del Cliente</h6>
-                                    </li>
-                                    <li class="slide">
-                                        <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 2">
-                                        <blockquote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
-                                            tempora quia quam assumenda amet cum neque sit distinctio obcaecati. Commodi
-                                            inventore amet itaque soluta animi illum error quibusdam maiores quisquam."
-                                        </blockquote>
-                                        <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
-                                        <h6>Puesto del Cliente</h6>
-                                    </li>
-                                    <li class="slide">
-                                        <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 3">
-                                        <blockquote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
-                                            tempora quia quam assumenda amet cum neque sit distinctio obcaecati. Commodi
-                                            inventore amet itaque soluta animi illum error quibusdam maiores quisquam."
-                                        </blockquote>
-                                        <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
-                                        <h6>Puesto del Cliente</h6>
-                                    </li>
-                                    <li class="slide">
-                                        <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 4">
-                                        <blockquote>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste
-                                            tempora quia quam assumenda amet cum neque sit distinctio obcaecati. Commodi
-                                            inventore amet itaque soluta animi illum error quibusdam maiores quisquam."
-                                        </blockquote>
-                                        <h3 class="text-first-color">NOMBRE DEL CLIENTE</h3>
-                                        <h6>Puesto del Cliente</h6>
-                                    </li>
-                                </ul>
-                                <aside class="testimonials__carousel--slides">
-                                    <label for="slide-1" id="dot-1"></label>
-                                    <label for="slide-2" id="dot-2"></label>
-                                    <label for="slide-3" id="dot-3"></label>
-                                    <label for="slide-4" id="dot-4"></label>
-                                </aside>
-                            </article>
+                            <h2 class="section__title">Skins</h2>
+                            <div class="carrousel">
+                                <div class="carrousel__slides">
+
+
+                                    <div class="carrousel__btns">
+                                        <a class="prev" href="#">&laquo;</a>
+                                        <a class="next" href="#">&raquo;</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
                 </aside>
             </article>
         </section>
