--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <div class="container full__screen--lg" id="champs__section">
                 <h2 class="section__title">Mis "Mains"</h2>
 
-                <!-- <a href="#runas">
+                <a href="#runas">
                     <article class="champion__card" id="Aatrox">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <h3>Aatrox</h3>
@@ -286,7 +286,7 @@
                             EL VÁMPIRO
                         </p>
                     </article>
-                </a> -->
+                </a>
 
             </div>
         </section>
