A ver si funcan las https

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" name="twitter:image" content="https://mirato1.github.io/Lol-Page/assets/aatrox.jpg">
     <meta property="og:url" name="twitter:url" content="https://mirato1.github.io/Lol-Page/index.html">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <!--Styles CSS-->
     <link rel="stylesheet" href="style.css">
@@ -69,7 +70,7 @@
                 <a href="#acerca">Sobre Mí</a>
                 <a href="#campeones">Campeones</a>
                 <a href="#portafolio">Proyectos</a>
-                <a href="#testimonios">Testimonios</a>
+                <a href="#skins">Skins</a>
                 <a href="#contacto">Contacto</a>
             </nav>
         </section>
@@ -1126,7 +1127,7 @@
         </article>
 
 
-        <section id="testimonios" class="testimonials">
+        <section id="skins" class="testimonials">
             <article class="hero__image" style="--hero-image: url('assets/Akshan_wall.jpg'); --hero-attachment:scroll;">
                 <aside class="hero__image--opacity" style="--hero-opacity-color:var(--white-alpha-color)">
                     <div class="skins__content">
