--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="container full__screen--lg" id="champs__section">
                 <h2 class="section__title">Mis "Mains"</h2>
 
-                <a href="#runas">
+                <!-- <a href="#runas">
                     <article class="champion__card" id="Aatrox">
                         <img src="assets/Aatrox.png" alt="Aatrox">
                         <h3>Aatrox</h3>
@@ -287,7 +287,7 @@
                             EL VÁMPIRO
                         </p>
                     </article>
-                </a>
+                </a> -->
 
             </div>
         </section>
@@ -1135,8 +1135,6 @@
                             <h2 class="section__title">Skins</h2>
                             <div class="carrousel">
                                 <div class="carrousel__slides">
-
-
                                     <div class="carrousel__btns">
                                         <a class="prev" href="#">&laquo;</a>
                                         <a class="next" href="#">&raquo;</a>
