Corrijo bug y agrego runas.

--- a/index.html
+++ b/index.html
@@ -452,6 +452,10 @@
                                                     <div class="masterie">
                                                         <img src="assets/Runas/Unflinching.png" alt="Unflinching">
                                                     </div>
+                                                    <div class="masterie keystone fake-none">
+                                                        <img src="assets/Runas/UltimateHunter.png"
+                                                            alt=" UltimateHunter.png">
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="separador"></div>
